--- a/content/post/covid-19_in_R_X.Rmd
+++ b/content/post/covid-19_in_R_X.Rmd
@@ -37,7 +37,7 @@ the rate of increase is *constant*. The dashed lines are predictions from that
 model. The red rectangle shows the range of ICU bed capacity per 100,000 population in each country.
 The lower limit assumes all reported cases need ICU care (unlikely, but worst case). The 
 top of the rectanble assumes only 5% of cases need ICU support. That best case assumes that the
-confirmed cases are a good representation of the size of the outbreak (also unlikely, unfortunately). ]
+confirmed cases are a good representation of the size of the outbreak (also unlikely, unfortunately).
 Note that the y axis is logarithmic. The x axis is now days since the 100th case in each country.
 
 ```{r featured_image, warning=FALSE, message=FALSE, echo=FALSE}
@@ -187,7 +187,7 @@ labs(y = "Active and Recovered cases per 100,000 population", title = "Active an
 
 The most obvious feature on this plot is how the growth in cases is slowing in Germany. [They are
 pulling this off with a massive testing effort that started early, in addition to getting people to move less.
-They are also reporting a very low death rate.](https://www.npr.org/2020/03/25/820595489/why-germanys-coronavirus-death-rate-is-far-lower-than-in-other-countries).
+They are also reporting a very low death rate](https://www.npr.org/2020/03/25/820595489/why-germanys-coronavirus-death-rate-is-far-lower-than-in-other-countries).
 Day 0 on this plot is the start of March for USA and Germany, and about March 10 for Canada and Australia.
 
 If you've been following along, you might notice that the prediction intervals on this figure are
@@ -342,4 +342,4 @@ Tomorrow I'll try to find a dataset that includes states.
 This post benefited from comments by Ramona Sky, Kelly Helm Smith, and Jessica Burnett.
 
 [^2]: I'm feeling pretty chuffed about this! I didn't copy/paste -- that code chunk pulls in the hidden one 
-and then only echos the lines I want echoed. 
+and then only echoes the lines I want echoed. 
